import java.util.ArrayList;
import java.util.List;

public class Main {
    static void main() {

        //Main skal kun være motor. Der skal ikke ligge andet end start, kør, slut.


       /* Movie interstellar = new Movie("Interstellar", 2004, new ArrayList<>(List.of("suspense, space")),9.6);
        Movie eightMile = new Movie("8 Mile", 2000, new ArrayList<>(List.of("Suspense, Drama")),8.2);
        Show familyGuy = new Show("Family Guy", 2005, new ArrayList<>(List.of("Comedy")), 8.7, 14, 20);

        User mathias = new User("Mathias", 31, "1234");
        mathias.addMovieToUserList(interstellar);
        mathias.addMovieToUserList(eightMile);
        mathias.addShowToUserList(familyGuy);

        mathias.displayToWatch();

        mathias.addMovieToHistory(eightMile);
        mathias.addShowToHistory(familyGuy);
        mathias.displayHistory();
*/
        User mathias = new User("Mathias", 31, "1234");
        MainMenu m = new MainMenu(mathias);
    }
}
