@startuml
'https://plantuml.com/class-diagram

class Main
class StartMenu {
    + startSession()
    + login()
    + registerUser()
    + displayUsers()
    + endSession()
}
class MainMenu {
    + displayMenu()
    + searchMovie()
    + searchShow()
    + searchCategory()
    + searchMoviesToWatch()
    + searchShowsToWatch()
    + play()

}
class User {
    - String name
    - int age
    - String password
    - moviesToWatch<Movie>
    - showsToWatch<Show>
    - movieHistory<Movie>
    - showHistory<Show>
    + user(name, age)
    + addShowToUserList()
    + addMovieToUserList()
    + addMovieToHistory()
    + addShowToHistory()
    + displayToWatch()
    + displayHistory()
}

class Content {
    - allMovieCategories
    - allShowsCategories
    - movieList<Movies>
    - showList<Shows>
    + scanForCategory()
    + createMovieList()
    + createShowList()
}

abstract class Media {
    - String name
    - int year
    - category<String>
    - double rating

}

class Movie {
    - String name
    - int year
    - category<String>
    - double rating
    + Movie (name, year, category, rating)
}
class Show {
    - String name
    - int year
    - category<String>
    - double rating
    - int seasons
    - int episodes
    + Show (name, year, category, rating
    ,  seasons, episodes)
}
class TextUI {
    + displayMessage()
    + promptBinary()
}
class FileIO {
    + readMovieCsv()
    + readShowsCsv()
    + addMovie()
    + addShow()
    + saveUserData()
    + readUserData()
}

Main *-- StartMenu
StartMenu *-- User
StartMenu *-- MainMenu
MainMenu *--- Content
Content *--- Media
Media <|--- Movie
Media <|--- Show



@enduml